--- a/index.html
+++ b/index.html
@@ -60,13 +60,18 @@
             alt=""
             class="img-fluid rounded-circle"
           />
-          <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+          <h1 class="text-light"><a href="index.html">Povilas Urbonas</a></h1>
           <div class="social-links mt-3 text-center">
             <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
             <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
             <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
             <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            <a
+              href="https://uk.linkedin.com/in/povilas-urbonas-0a6a53a4"
+              target="_blank"
+              class="linkedin"
+              ><i class="bx bxl-linkedin"></i
+            ></a>
           </div>
         </div>
 
@@ -411,7 +416,7 @@
             <div class="col-lg-6" data-aos="fade-up">
               <h3 class="resume-title">Sumary</h3>
               <div class="resume-item pb-0">
-                <h4>Alex Smith</h4>
+                <h4>Povilas Urbonas</h4>
                 <p>
                   <em
                     >Innovative and deadline-driven Graphic Designer with 3+
