--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>iPortfolio Bootstrap Template - Index</title>
+    <title>Povilas Portfolio - Index</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -62,10 +62,13 @@
           />
           <h1 class="text-light"><a href="index.html">Povilas Urbonas</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
             <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
             <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+            <a href="https://github.com/PovilasU" target="_blank" class="github"
+              ><i class="bx bxl-github"></i
+            ></a>
             <a
               href="https://uk.linkedin.com/in/povilas-urbonas-0a6a53a4"
               target="_blank"
@@ -138,12 +141,7 @@
         <div class="container">
           <div class="section-title">
             <h2>About</h2>
-            <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
-            </p>
+            <p>I'm Full Stack Web Developer since 2016.</p>
           </div>
 
           <div class="row">
@@ -151,7 +149,7 @@
               <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-              <h3>UI/UX Designer &amp;Full Stack Web Developer.</h3>
+              <h3>Full Stack Web Developer.</h3>
               <p class="fst-italic">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -159,30 +157,31 @@
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li>
+                    <!-- <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Birthday:</strong> <span>1 May 1995</span>
-                    </li>
+                    </li> -->
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Website:</strong> <span>www.example.com</span>
+                      <strong>Website:</strong> <span>https://povilas.cc</span>
                     </li>
-                    <li>
+                    <!-- <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Phone:</strong> <span>+123 456 7890</span>
-                    </li>
+                    </li> -->
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>City:</strong> <span>New York, USA</span>
+                      <strong>City:</strong>
+                      <span>Sittingbourne, United Kingdom</span>
                     </li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
-                    <li>
+                    <!-- <li>
                       <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
                       <span>30</span>
-                    </li>
+                    </li> -->
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Degree:</strong> <span>Master</span>
@@ -190,12 +189,12 @@
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>PhEmailone:</strong>
-                      <span>email@example.com</span>
+                      <span>povilas dot urbonas85 (at) gmail dot com</span>
                     </li>
-                    <li>
+                    <!-- <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Freelance:</strong> <span>Available</span>
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
               </div>
@@ -1086,14 +1085,14 @@
     <footer id="footer">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>iPortfolio</span></strong>
+          <!-- &copy; 2022 <strong><span>Povilas</span></strong> -->
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
         </div>
       </div>
     </footer>
