commented unused sections

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                 ><i class="bx bx-book-content"></i> <span>Portfolio</span></a
               >
             </li>
-            <li>
+            <!-- <li>
               <a href="#services" class="nav-link scrollto"
                 ><i class="bx bx-server"></i> <span>Services</span></a
               >
-            </li>
+            </li> -->
             <li>
               <a href="#contact" class="nav-link scrollto"
                 ><i class="bx bx-envelope"></i> <span>Contact</span></a
@@ -151,8 +151,14 @@
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
               <h3>Full Stack Web Developer.</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                As a Full Stack Web Developer, I specialize in crafting
+                user-centric web applications using frontend technologies like
+                React.js and Angular.js, alongside backend frameworks like
+                Node.js and ASP.NET. With expertise in database management and
+                API development, I ensure seamless functionality and exceptional
+                user experiences. Committed to staying updated on industry
+                trends, I deliver efficient and secure solutions that meet
+                client needs.
               </p>
               <div class="row">
                 <div class="col-lg-6">
@@ -199,13 +205,15 @@
                 </div>
               </div>
               <p>
-                Officiis eligendi itaque labore et dolorum mollitia officiis
-                optio vero. Quisquam sunt adipisci omnis et ut. Nulla
-                accusantium dolor incidunt officia tempore. Et eius omnis.
-                Cupiditate ut dicta maxime officiis quidem quia. Sed et
-                consectetur qui quia repellendus itaque neque. Aliquid amet
-                quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis
-                culpa magni laudantium dolores.
+                My experience extends to database management, API integration,
+                and server deployment, ensuring seamless functionality and
+                performance optimization across the development lifecycle. I
+                thrive in collaborative environments, adept at communicating
+                technical concepts to diverse stakeholders and adapting to
+                evolving project requirements. With a commitment to staying
+                abreast of industry trends and best practices, I am dedicated to
+                delivering cutting-edge solutions that empower businesses to
+                achieve their goals efficiently and effectively.
               </p>
             </div>
           </div>
@@ -740,7 +748,7 @@
       <!-- End Portfolio Section -->
 
       <!-- ======= Services Section ======= -->
-      <section id="services" class="services">
+      <!-- <section id="services" class="services">
         <div class="container">
           <div class="section-title">
             <h2>Services</h2>
@@ -823,11 +831,11 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End Services Section -->
 
       <!-- ======= Testimonials Section ======= -->
-      <section id="testimonials" class="testimonials section-bg">
+      <!-- <section id="testimonials" class="testimonials section-bg">
         <div class="container">
           <div class="section-title">
             <h2>Testimonials</h2>
@@ -866,7 +874,7 @@
               </div>
               <!-- End testimonial item -->
 
-              <div class="swiper-slide">
+              <!-- <div class="swiper-slide">
                 <div
                   class="testimonial-item"
                   data-aos="fade-up"
@@ -888,10 +896,10 @@
                   <h3>Sara Wilsson</h3>
                   <h4>Designer</h4>
                 </div>
-              </div>
+              </div> -->
               <!-- End testimonial item -->
 
-              <div class="swiper-slide">
+              <!-- <div class="swiper-slide">
                 <div
                   class="testimonial-item"
                   data-aos="fade-up"
@@ -912,10 +920,10 @@
                   <h3>Jena Karlis</h3>
                   <h4>Store Owner</h4>
                 </div>
-              </div>
+              </div> -->
               <!-- End testimonial item -->
 
-              <div class="swiper-slide">
+              <!-- <div class="swiper-slide">
                 <div
                   class="testimonial-item"
                   data-aos="fade-up"
@@ -937,9 +945,9 @@
                   <h3>Matt Brandon</h3>
                   <h4>Freelancer</h4>
                 </div>
-              </div>
+              </div> -->
               <!-- End testimonial item -->
-
+<!-- 
               <div class="swiper-slide">
                 <div
                   class="testimonial-item"
@@ -968,7 +976,7 @@
             <div class="swiper-pagination"></div>
           </div>
         </div>
-      </section>
+      </section>  -->
       <!-- End Testimonials Section -->
 
       <!-- ======= Contact Section ======= -->
@@ -1006,7 +1014,7 @@
                 </div>
 
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2520.6002922098675!2d0.7372977156126825!3d51.34043447959136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8d94c8c8c0d9f%3A0x9f2e749a91faebe5!2sSittingbourne%2C%20UK!5e0!3m2!1sen!2suk!4v1644682228828!5m2!1sen!2suk"
                   frameborder="0"
                   style="border: 0; width: 100%; height: 290px"
                   allowfullscreen
