updated sections text

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <!-- End About Section -->
 
       <!-- ======= Facts Section ======= -->
-      <section id="facts" class="facts">
+      <!-- <section id="facts" class="facts">
         <div class="container">
           <div class="section-title">
             <h2>Facts</h2>
@@ -303,7 +303,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End Facts Section -->
 
       <!-- ======= Skills Section ======= -->
@@ -312,10 +312,15 @@
           <div class="section-title">
             <h2>Skills</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Proficient in a variety of technologies and tools, I specialize in
+              crafting dynamic web solutions. With expertise in HTML, CSS, and
+              JavaScript, I create engaging and responsive user interfaces.
+              Leveraging frameworks like React.js and ASP.NET C#, I develop
+              robust applications that meet client needs effectively. My
+              proficiency extends to database management with SQL and MongoDB,
+              ensuring seamless data integration. Experienced in version control
+              with Git, I collaborate efficiently in team environments to
+              deliver high-quality projects.
             </p>
           </div>
 
@@ -522,10 +527,11 @@
           <div class="section-title">
             <h2>Portfolio</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Explore a showcase of my recent projects and see how I turn ideas
+              into reality. From sleek web applications to captivating user
+              interfaces, each project reflects my commitment to quality and
+              innovation. Dive into the portfolio to discover the breadth of my
+              skills and expertise.
             </p>
           </div>
 
@@ -874,7 +880,7 @@
               </div>
               <!-- End testimonial item -->
 
-              <!-- <div class="swiper-slide">
+      <!-- <div class="swiper-slide">
                 <div
                   class="testimonial-item"
                   data-aos="fade-up"
@@ -897,9 +903,9 @@
                   <h4>Designer</h4>
                 </div>
               </div> -->
-              <!-- End testimonial item -->
+      <!-- End testimonial item -->
 
-              <!-- <div class="swiper-slide">
+      <!-- <div class="swiper-slide">
                 <div
                   class="testimonial-item"
                   data-aos="fade-up"
@@ -921,9 +927,9 @@
                   <h4>Store Owner</h4>
                 </div>
               </div> -->
-              <!-- End testimonial item -->
+      <!-- End testimonial item -->
 
-              <!-- <div class="swiper-slide">
+      <!-- <div class="swiper-slide">
                 <div
                   class="testimonial-item"
                   data-aos="fade-up"
@@ -946,8 +952,8 @@
                   <h4>Freelancer</h4>
                 </div>
               </div> -->
-              <!-- End testimonial item -->
-<!-- 
+      <!-- End testimonial item -->
+      <!-- 
               <div class="swiper-slide">
                 <div
                   class="testimonial-item"
@@ -972,11 +978,11 @@
                 </div>
               </div>
               <!-- End testimonial item -->
-            </div>
+      <!-- </div>
             <div class="swiper-pagination"></div>
           </div>
         </div>
-      </section>  -->
+      </section>   -->
       <!-- End Testimonials Section -->
 
       <!-- ======= Contact Section ======= -->
@@ -985,10 +991,10 @@
           <div class="section-title">
             <h2>Contact</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Get in touch with me to discuss your project ideas or
+              collaborations.
+              <!-- I'm available for freelance work and always excited to explore new opportunities. 
+               Feel free to reach out and let's create something amazing together! -->
             </p>
           </div>
 
@@ -998,20 +1004,20 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Sittingbourne, UK</p>
                 </div>
 
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com</p>
+                  <p>povilas.urbonas85@gmail.com</p>
                 </div>
 
-                <div class="phone">
+                <!-- <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
                   <p>+1 5589 55488 55s</p>
-                </div>
+                </div> -->
 
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2520.6002922098675!2d0.7372977156126825!3d51.34043447959136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8d94c8c8c0d9f%3A0x9f2e749a91faebe5!2sSittingbourne%2C%20UK!5e0!3m2!1sen!2suk!4v1644682228828!5m2!1sen!2suk"
