--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                 ><i class="bx bx-file-blank"></i> <span>Resume</span></a
               >
             </li>
-            <li>
+            <!-- <li>
               <a href="#portfolio" class="nav-link scrollto"
                 ><i class="bx bx-book-content"></i> <span>Portfolio</span></a
               >
-            </li>
+            </li> -->
             <!-- <li>
               <a href="#services" class="nav-link scrollto"
                 ><i class="bx bx-server"></i> <span>Services</span></a
@@ -194,8 +194,9 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>PhEmailone:</strong>
-                      <span>povilas dot urbonas85 (at) gmail dot com</span>
+                      <strong>Email:</strong>
+                      <!-- <span>povilas dot urbonas85 (at) gmail dot com</span> -->
+                      <span>povilas.urbonas85@gmail.com</span>
                     </li>
                     <!-- <li>
                       <i class="bi bi-chevron-right"></i>
@@ -417,10 +418,15 @@
           <div class="section-title">
             <h2>Resume</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              An adaptable and driven professional with a keen eye for detail
+              and a passion for problem-solving. With a solid foundation in
+              software development and a track record of delivering high-quality
+              projects, I excel in fast-paced environments. Proficient in
+              multiple programming languages and frameworks, I leverage my
+              expertise to develop innovative solutions that meet both client
+              requirements and business objectives. A collaborative team player
+              with excellent communication skills, I thrive in dynamic settings
+              where creativity and innovation are encouraged.
             </p>
           </div>
 
@@ -522,7 +528,7 @@
       <!-- End Resume Section -->
 
       <!-- ======= Portfolio Section ======= -->
-      <section id="portfolio" class="portfolio section-bg">
+      <!-- <section id="portfolio" class="portfolio section-bg">
         <div class="container">
           <div class="section-title">
             <h2>Portfolio</h2>
@@ -750,7 +756,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End Portfolio Section -->
 
       <!-- ======= Services Section ======= -->
