--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <div class="progress">
-                <span class="skill">ReactJS <i class="val">90%</i></span>
+                <span class="skill">React<i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -395,7 +395,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">PHP <i class="val">55%</i></span>
+                <span class="skill">Node.js<i class="val">55%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -444,27 +444,26 @@
                   >
                 </p>
                 <ul>
-                  <li>Portland par 127,Orlando, FL</li>
-                  <li>(123) 456-7891</li>
-                  <li>alice.barkley@example.com</li>
+                  <li>Sittingbourne, UK</li>
+                  <li>+44 (0)203 475 8733</li>
+                  <li>info@tribeca-it.com</li>
                 </ul>
               </div>
 
               <h3 class="resume-title">Education</h3>
               <div class="resume-item">
-                <h4>Master of Fine Arts &amp; Graphic Design</h4>
-                <h5>2015 - 2016</h5>
-                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+                <h4>Master of Science &amp; Computer science</h4>
+                <h5>2020 - 2022</h5>
+                <p><em>Middlesex University, London, UK</em></p>
                 <p>
-                  Qui deserunt veniam. Et sed aliquam labore tempore sed
-                  quisquam iusto autem sit. Ea vero voluptatum qui ut
-                  dignissimos deleniti nerada porti sand markend
+                  Master By Reseach
+                  <i>"Gamification for healthier lifestyle"</i>
                 </p>
               </div>
               <div class="resume-item">
-                <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                <h5>2010 - 2014</h5>
-                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+                <h4>Bachelor Science &amp; Computer Science</h4>
+                <h5>2015 - 2019</h5>
+                <p><em>Middlesex University, London, UK</em></p>
                 <p>
                   Quia nobis sequi est occaecati aut. Repudiandae et iusto quae
                   reiciendis et quis Eius vel ratione eius unde vitae rerum
