--- a/index.html
+++ b/index.html
@@ -435,14 +435,15 @@
               <h3 class="resume-title">Sumary</h3>
               <div class="resume-item pb-0">
                 <h4>Povilas Urbonas</h4>
-                <p>
-                  <em
-                    >Innovative and deadline-driven Graphic Designer with 3+
-                    years of experience designing and developing user-centered
-                    digital/print marketing material from initial concept to
-                    final, polished deliverable.</em
-                  >
-                </p>
+
+                <em>
+                  Dynamic and results-oriented Software Developer with over 6
+                  years of experience in crafting innovative and efficient
+                  solutions. Proficient in designing and implementing
+                  user-centric software applications, from conceptualization
+                  through to deployment, to meet project objectives and exceed
+                  client expectations.
+                </em>
                 <ul>
                   <li>Sittingbourne, UK</li>
                   <li>+44 (0)203 475 8733</li>
@@ -465,10 +466,17 @@
                 <h5>2015 - 2019</h5>
                 <p><em>Middlesex University, London, UK</em></p>
                 <p>
-                  Quia nobis sequi est occaecati aut. Repudiandae et iusto quae
-                  reiciendis et quis Eius vel ratione eius unde vitae rerum
-                  voluptates asperiores voluptatem Earum molestiae consequatur
-                  neque etlon sader mart dila
+                  I hold a First-Class Honours Bachelor of Science degree in
+                  Computer Science, complemented by a year-long sandwich
+                  placement at Rolls-Royce as a Software Developer. This
+                  invaluable experience provided me with hands-on exposure to
+                  real-world projects and enhanced my understanding of software
+                  development methodologies and industry best practices. It
+                  strengthened my ability to collaborate effectively within
+                  multidisciplinary teams and apply theoretical knowledge to
+                  practical scenarios. This experience has been instrumental in
+                  shaping my skills and preparing me for the dynamic challenges
+                  of the tech industry.
                 </p>
               </div>
             </div>
