--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
                 </em>
                 <ul>
                   <li>Sittingbourne, UK</li>
-                  <li>+44 (0)203 475 8733</li>
-                  <li>info@tribeca-it.com</li>
+                  <!-- <li>+44 (0)203 475 8733</li> -->
+                  <li>povilas.urbonas85@gmail.com</li>
                 </ul>
               </div>
 
@@ -483,9 +483,9 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item">
-                <h4>Senior graphic design specialist</h4>
-                <h5>2019 - Present</h5>
-                <p><em>Experion, New York, NY </em></p>
+                <h4>Developer</h4>
+                <h5>2024 - Present</h5>
+                <p><em>Tribaca-it, Sittingbourne, UK </em></p>
                 <ul>
                   <li>
                     Lead in the design, development, and implementation of the
@@ -506,9 +506,9 @@
                 </ul>
               </div>
               <div class="resume-item">
-                <h4>Graphic design specialist</h4>
-                <h5>2017 - 2018</h5>
-                <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                <h4>Software engineer</h4>
+                <h5>2019 - 2023</h5>
+                <p><em>Allente, Oslo, Norway</em></p>
                 <ul>
                   <li>
                     Developed numerous marketing programs (logos,
