--- a/index.html
+++ b/index.html
@@ -483,26 +483,15 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item">
+
                 <h4>Developer</h4>
                 <h5>2024 - Present</h5>
                 <p><em>Tribaca-it, Sittingbourne, UK </em></p>
                 <ul>
-                  <li>
-                    Lead in the design, development, and implementation of the
-                    graphic, layout, and production communication materials
-                  </li>
-                  <li>
-                    Delegate tasks to the 7 members of the design team and
-                    provide counsel on all aspects of the project.
-                  </li>
-                  <li>
-                    Supervise the assessment of all graphic materials in order
-                    to ensure quality and accuracy of the design
-                  </li>
-                  <li>
-                    Oversee the efficient use of production project budgets
-                    ranging from $2,000 - $25,000
-                  </li>
+                  <li>Responsible for spearheading the development of internal tools utilizing ASP.NET, React.js, Angular, and SQL to streamline operational processes.</li>
+                  <li>Collaborate with cross-functional teams to design and implement APIs, enhancing system interoperability and data exchange.</li>
+                  <li>Drive the integration of Azure services to optimize cloud infrastructure and improve scalability and performance.</li>
+                </ul>
                 </ul>
               </div>
               <div class="resume-item">
