--- a/index.html
+++ b/index.html
@@ -500,8 +500,7 @@
                 <p><em>Allente, Oslo, Norway</em></p>
                 <ul>
                   <li>
-                    Developed numerous marketing programs (logos,
-                    brochures,infographics, presentations, and advertisements).
+                    Front End web development (ReactJs, JavaScript,C#,ASP.NET MVC,SASS, Episerver, Git, Jira).
                   </li>
                   <li>
                     Managed up to 5 projects or tasks at a given time while
