updated job description

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 
                 <h4>Developer</h4>
                 <h5>2024 - Present</h5>
-                <p><em>Tribaca-it, Sittingbourne, UK </em></p>
+                <p><em>Tribeca-it, Sittingbourne, UK </em></p>
                 <ul>
                   <li>Responsible for spearheading the development of internal tools utilizing ASP.NET, React.js, Angular, and SQL to streamline operational processes.</li>
                   <li>Collaborate with cross-functional teams to design and implement APIs, enhancing system interoperability and data exchange.</li>
@@ -498,21 +498,39 @@
                 <h4>Software engineer</h4>
                 <h5>2019 - 2023</h5>
                 <p><em>Allente, Oslo, Norway</em></p>
+                <p><em>Allente is a TV distributor and internet service provider in Norway, Sweden, Denmark and Finland.</em></p>
                 <ul>
                   <li>
                     Front End web development (ReactJs, JavaScript,C#,ASP.NET MVC,SASS, Episerver, Git, Jira).
                   </li>
                   <li>
-                    Managed up to 5 projects or tasks at a given time while
-                    under pressure
+                    Proactively liaised with the design team and project manager to ensure efficient and timely delivery
+                    of significant features for example updated New Sale Campaign flow using React Redux and React
+                    Context API for state management and Sass preprocessor CSS scripting language to implement
+                    visual updates.
                   </li>
                   <li>
-                    Recommended and consulted with clients on the most
-                    appropriate graphic design
+                    Using React with TypeScript implemented applications to guide customers through the “customer
+                    service” flow which has multiple choices.
                   </li>
                   <li>
-                    Created 4+ design presentations and proposals a month for
-                    clients and account managers
+                    Updated website typography (headers, paragraphs etc.) using Sass CSS preprocessor.
+                  </li>
+                  <li>
+                    Actively participating in meetings when new features are planned. Also continuously communicating
+                    with product owners and stakeholders, and based on feedback updates if needed could be achieved
+                    earlier.
+                  </li>
+                  <li>
+                    Implemented improvements on cleanup processes and performance such as webpack tweaks to
+                    reduce JavaScript module bundle so the website can be loaded faster.
+                  </li>
+                  <li>
+                    Creating email templates using Adobe Campaign tool for the marketing team to launch new
+                    campaigns and send SMS to the customers.
+                  </li>
+                  <li>
+                    Adding Adobe Analytics to the website to track customer activity on the website.
                   </li>
                 </ul>
               </div>
