updated job descriptions and photo

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>City:</strong>
-                      <span>Sittingbourne, United Kingdom</span>
+                      <span>Kaunas, Lithuania</span>
                     </li>
                   </ul>
                 </div>
@@ -445,7 +445,7 @@
                   client expectations.
                 </em>
                 <ul>
-                  <li>Sittingbourne, UK</li>
+                  <li>Kaunas, Lithuania</li>
                   <!-- <li>+44 (0)203 475 8733</li> -->
                   <li>povilas.urbonas85@gmail.com</li>
                 </ul>
@@ -483,54 +483,95 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item">
-
-                <h4>Developer</h4>
-                <h5>2024 - Present</h5>
-                <p><em>Tribeca-it, Sittingbourne, UK </em></p>
+                <h4>Full-Stack Developer / Team Lead</h4>
+                <h5>Septemper 2024 - Present</h5>
+                <p><em>IT Sprendimai MB, Lithuania </em></p>
                 <ul>
-                  <li>Responsible for spearheading the development of internal tools utilizing ASP.NET, React.js, Angular, and SQL to streamline operational processes.</li>
-                  <li>Collaborate with cross-functional teams to design and implement APIs, enhancing system interoperability and data exchange.</li>
-                  <li>Drive the integration of Azure services to optimize cloud infrastructure and improve scalability and performance.</li>
-                </ul>
+                  <li>
+                    Lead WordPress development, handling backend (PHP) and
+                    frontend (JS, CSS) while managing team tasks and code
+                    reviews.
+                  </li>
+                  <li>
+                    Built custom themes, plugins, and API integrations,
+                    optimizing performance and scalability.
+                  </li>
+                  <li>
+                    Implemented cloud services and third-party integrations to
+                    enhance functionality and efficiency.
+                  </li>
                 </ul>
               </div>
               <div class="resume-item">
-                <h4>Software engineer</h4>
-                <h5>2019 - 2023</h5>
-                <p><em>Allente, Oslo, Norway</em></p>
-                <p><em>Allente is a TV distributor and internet service provider in Norway, Sweden, Denmark and Finland.</em></p>
+                <h4>.NET Developer</h4>
+                <h5>January 2024 - July 2024</h5>
+                <p><em>Tribeca-it, Sittingbourne, UK </em></p>
                 <ul>
                   <li>
-                    Front End web development (ReactJs, JavaScript,C#,ASP.NET MVC,SASS, Episerver, Git, Jira).
+                    Developed and optimized internal tools, improving
+                    operational efficiency with custom software solutions
                   </li>
                   <li>
-                    Proactively liaised with the design team and project manager to ensure efficient and timely delivery
-                    of significant features for example updated New Sale Campaign flow using React Redux and React
-                    Context API for state management and Sass preprocessor CSS scripting language to implement
-                    visual updates.
+                    Built dynamic web applications using ASP.NET, Blazor,
+                    ReactJS, C#, JavaScript, and CSS.
                   </li>
                   <li>
-                    Using React with TypeScript implemented applications to guide customers through the “customer
-                    service” flow which has multiple choices.
+                    Designed SQL database architecture and created a reports
+                    automation tool exporting to MS Word.
+                  </li>
+                </ul>
+              </div>
+              <div class="resume-item">
+                <h4>Front End Developer</h4>
+                <h5>May 2019 - September 2023</h5>
+                <p><em>Allente, Oslo, Norway</em></p>
+                <p>
+                  <em
+                    >Allente is a TV distributor and internet service provider
+                    in Norway, Sweden, Denmark and Finland.</em
+                  >
+                </p>
+                <ul>
+                  <li>
+                    Front End web development (ReactJs, JavaScript,C#,ASP.NET
+                    MVC,SASS, Episerver, Git, Jira).
                   </li>
                   <li>
-                    Updated website typography (headers, paragraphs etc.) using Sass CSS preprocessor.
+                    Proactively liaised with the design team and project manager
+                    to ensure efficient and timely delivery of significant
+                    features for example updated New Sale Campaign flow using
+                    React Redux and React Context API for state management and
+                    Sass preprocessor CSS scripting language to implement visual
+                    updates.
                   </li>
                   <li>
-                    Actively participating in meetings when new features are planned. Also continuously communicating
-                    with product owners and stakeholders, and based on feedback updates if needed could be achieved
-                    earlier.
+                    Using React with TypeScript implemented applications to
+                    guide customers through the “customer service” flow which
+                    has multiple choices.
                   </li>
                   <li>
-                    Implemented improvements on cleanup processes and performance such as webpack tweaks to
-                    reduce JavaScript module bundle so the website can be loaded faster.
+                    Updated website typography (headers, paragraphs etc.) using
+                    Sass CSS preprocessor.
                   </li>
                   <li>
-                    Creating email templates using Adobe Campaign tool for the marketing team to launch new
-                    campaigns and send SMS to the customers.
+                    Actively participating in meetings when new features are
+                    planned. Also continuously communicating with product owners
+                    and stakeholders, and based on feedback updates if needed
+                    could be achieved earlier.
                   </li>
                   <li>
-                    Adding Adobe Analytics to the website to track customer activity on the website.
+                    Implemented improvements on cleanup processes and
+                    performance such as webpack tweaks to reduce JavaScript
+                    module bundle so the website can be loaded faster.
+                  </li>
+                  <li>
+                    Creating email templates using Adobe Campaign tool for the
+                    marketing team to launch new campaigns and send SMS to the
+                    customers.
+                  </li>
+                  <li>
+                    Adding Adobe Analytics to the website to track customer
+                    activity on the website.
                   </li>
                 </ul>
               </div>
@@ -1023,7 +1064,7 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>Sittingbourne, UK</p>
+                  <p>Kaunas, Lithuania</p>
                 </div>
 
                 <div class="email">
@@ -1039,7 +1080,7 @@
                 </div> -->
 
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2520.6002922098675!2d0.7372977156126825!3d51.34043447959136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8d94c8c8c0d9f%3A0x9f2e749a91faebe5!2sSittingbourne%2C%20UK!5e0!3m2!1sen!2suk!4v1644682228828!5m2!1sen!2suk"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d93931.36064573267!2d23.841560549999998!3d54.900014899999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e722b6e43a6639%3A0x400d18c40fc92d0!2sKaunas%2C%20Lithuania!5e0!3m2!1sen!2slt!4v1705667891234!5m2!1sen!2slt"
                   frameborder="0"
                   style="border: 0; width: 100%; height: 290px"
                   allowfullscreen
